<?xml version="1.0" encoding="utf-8"?>
<!--ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" -->
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linder.moneyhelper1.MainActivity">


    <LinearLayout
        android:id="@+id/titlemain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlemain"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_margin="12dp"
        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ahorro"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo_actual"
       android:layout_weight="1"/>
    <TextView
        android:id="@+id/montoAhorro"
        android:layout_margin="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$/: 1200"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_credito"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/credito"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$/: 2000"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saldo_efectivo"/>
        <TextView
            android:id="@+id/actual"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$/: 120"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje"
            android:layout_margin="12dp"/>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_margin="12dp"
            style="@android:style/Widget.ProgressBar.Horizontal" />




    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/summary"
        android:src="@drawable/ic_exposure_plus"
        android:onClick="addItem"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart1"
            android:backgroundTint="#3c3d3c"
            android:background="#3c3d3d"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

</LinearLayout>
<!--/ScrollView-->